--- a/src/main/resources/templates/jttp.vm
+++ b/src/main/resources/templates/jttp.vm
@@ -40,19 +40,19 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 			<div id="message" style="color: red; ">
 		 			$i18n.getText($message) $messageParameter
 		  	</div>
+		  	<input type="text" id="date" name="date" style="display: none" onchange="this.form.datesubmit.click()" />
+			<input type="submit" id="datesubmit" name="datesubmit" class="spaced" style="display: none"/>
 			<div id="calendar_div" style="text-align: left; vertical-align: inherit; float: left; padding:5px;">
+			#if($isPopup)
 				<input type="submit" id="monthBack"  name="monthBack" value="<<<" class="button" />
 				<input type="submit" id="weekBack"  name="weekBack" value="<<" class="button"  />
 				<input type="submit" id="dayBack"  name="dayBack" value="<" class="button"  />
 				 $dateFormated
-				<input type="text" id="date" name="date" style="display: none" onchange="this.form.datesubmit.click()" />
 				<img id="date_trigger" src="/images/icons/cal.gif" width="16" height="16" border="0"
 					alt="Pick a date"/>
-				<input type="submit" id="datesubmit" name="datesubmit" class="spaced" style="display: none"/>
 				<input type="submit" id="dayNext"  name="dayNext" value=">"  class="button"/>
 				<input type="submit" id="weekNext"  name="weekNext" value=">>"  class="button"/>
 				<input type="submit" id="monthNext"  name="monthNext" value=">>>" class="button" />
-			</div>
 			<script>
 				var cal= Calendar.setup({
 					firstDay : 0,
@@ -66,142 +66,175 @@ $webResourceManager.requireResource("jira.webresources:calendar-en")
 					useISO8601WeekNumbers : false,
 					ifFormat : '%Y-%m-%d'
 				});
-				##This is the not popup calendar. Works but not nice
-				Calendar.setup({
-					firstDay : 0,
-					align : 'Br',
-					electric: true,
-					singleClick : true,
-					showOthers: true,
-					useISO8601WeekNumbers : false,
-					flat: 'calendar_div',
-					flatCallback: dateChanged,
-					ifFormat : '%Y-%m-%d'
-				});
-				
-				function dateChanged(calendar)
-				  {
-				      document.getElementById("date").value=calendar.date.print(calendar.params.ifFormat);
-				      jQuery(document.getElementById("date")).change();
-				  };
-				
 				</script>
+			#end
+			</div>
 			<div id="summary" style="text-align: right; float: right; padding:5px;">
 				$i18n.getText("plugin.summary") $i18n.getText("plugin.day") ( $daySummary ) $i18n.getText("plugin.week") ( $weekSummary) $i18n.getText("plugin.month") ( $monthSummary)
 			</div>
 		    #parse("templates/list.vm")
 	   		</br>
-	   		<div >
-			<table  width="80%">
-		                <tbody>
-		                    <tr>
-		                        <td width="50%">
-		                        <div class="field-group">
-		                          	 	$i18n.getText("plugin.start.time"): <img src="/images/required.png" width="16" height="16" border="0" />
-		                          </div>	 
-		                           <input id="startTime"  type="text" name="startTime" value="$startTime"/> <input id="startNow"  type="button" name="startNow" value="$i18n.getText('plugin.now')" class="button"/>
-		                           <script>
-										AJS.$("#startNow").click(function() {
-	                   						var currentTime = new Date();
-											var hour = currentTime.getHours();
-											if (hour < 10){
-												hour = "0" + hour
-											}
-											var minute = currentTime.getMinutes();
-											if (minute < 10){
-												minute = "0" + minute
-											}
-											var now = hour + ':' + minute;
-											AJS.$("#startTime").val(now);
-	               						 });
-									</script>
-		                        </td>
-								<td>
-		                    	 	<input id="radioEnd" type="radio" name="endOrDuration" value="end" style="margin-right: 10px" checked="true" onclick="this.form.durationTime.readOnly=true;this.form.endTime.readOnly=false"> $i18n.getText("plugin.end.time"):</br>
-		                    	 	<input id="endTime"  type="text" name="endTime" value="$endTime" onclick="this.form.durationTime.readOnly=true;this.form.endTime.readOnly=false;this.form.radioEnd.checked=true" /> <input id="endNow"  type="button" name="endNow" value="$i18n.getText('plugin.now')" class="button" />
-		                           <script>
-										AJS.$("#endNow").click(function() {
-	                   						var currentTime = new Date();
-											var hour = currentTime.getHours();
-											if (hour < 10){
-												hour = "0" + hour
-											}
-											var minute = currentTime.getMinutes();
-											if (minute < 10){
-												minute = "0" + minute
-											}
-											var now = hour + ':' + minute;
-											AJS.$("#endTime").val(now);
-	               						 });
-									</script>
-		                    	 	
-		                    	 </td>
-		                    </tr>
-		                    <tr>
-		                    	<td width="50%">
-		                           Issue: <img src="/images/required.png" width="16" height="16" border="0"/>
-		                          ## <div id="issueSelect_cont_cont" >
-	  							   <div id="issueSelect_container" class="ajax_autocomplete atlassian-autocomplete" >
-						    		<select class="hidden"
-						    			multiple="none" 
-						    			name="issueSelect" 
-										id="issueSelect" 
-						    			data-popup-link-message="" 
-						    			data-popup-width="620" 
-						    			data-popup-height="500" 
-						    			data-remove-on-un-select="true" 
-						    			data-ajax-options.query="true" 
-						    			data-ajax-options.url="${req.contextPath}/rest/api/1.0/issues/picker" 
-						    			data-ajax-options.data.query="-" 
-						    			data-ajax-options.data.current-issue-key=""
-						    			data-ajax-options.data.show-sub-tasks="true" 
-								    	data-ajax-options.data.show-sub-task-parent="true"
-										#if (${action.currentJQL})
-											data-ajax-options.data.current_jql=${action.currentJQL}
-										#end>
-										
-									</select> 
-						    		<script>
-										var ip = new AJS.IssuePicker({
-								  		element: AJS.$("#issueSelect"),
-								  		userEnteredOptionsMsg: AJS.params.enterIssueKey,
-								  		uppercaseUserEnteredOnSelect: true,
-								  		singleSelectOnly: true,
-								   		currentProjectId: $projectsId,
-										});
-										
-										//Set the issue key			
-										AJS.$("#issueSelect-textarea").append("$issueKey");
-										ip.handleFreeInput();
-									</script>
-								##</div>
-							 	</div>
-		                        </td>
-		                    	 <td>
-		                    	 	<input id="radioDuration" type="radio" name="endOrDuration" value="duration" style="margin-right: 10px" onclick="this.form.endTime.readOnly=true;this.form.durationTime.readOnly=false" > $i18n.getText("plugin.duration.time"): </br>
-		                    	 	<input id="durationTime"  type="text" name="durationTime" value="$durationTime" onclick="this.form.endTime.readOnly=true;this.form.durationTime.readOnly=false;this.form.radioDuration.checked=true "/>
-		                    	 </td>
-		                    </tr>
-		                  </tbody>
-		            </table>     
-		            <table width="100%">
-		            	 <tr>
-		            	 	<td width="100%">
-		                    	$i18n.getText("plugin.note"):</br>
-		 	  					#set($fieldId = "comments")	
-		 	  					#parse("templates/plugins/renderers/wiki/wiki-renderer-edit.vm")
-		 	  					<script>
-		 	  						AJS.$("#comments").append("$comment");
-		 	  					</script>
-		 	  				</td>
-		                  </tr>
-		            </table>   
+	   		<div>
+	   		<table  width="100%">
+	   			<tbody>
+	   				<tr>
+	   					<input id="editAll"  type="submit" name="editall" value="$i18n.getText('plugin.edit.all')" class="button" />
+	   					<td width="70%">
+							<table>
+						                <tbody>
+						                    <tr>
+						                        <td width="50%">
+						                        <div class="field-group">
+						                          	 	$i18n.getText("plugin.start.time"): <img src="/images/required.png" width="16" height="16" border="0" />
+						                          </div>	 
+						                           <input id="startTime"  type="text" name="startTime" value="$startTime"/> <input id="startNow"  type="button" name="startNow" value="$i18n.getText('plugin.now')" class="button"/>
+						                           <script>
+														AJS.$("#startNow").click(function() {
+					                   						var currentTime = new Date();
+															var hour = currentTime.getHours();
+															if (hour < 10){
+																hour = "0" + hour
+															}
+															var minute = currentTime.getMinutes();
+															if (minute < 10){
+																minute = "0" + minute
+															}
+															var now = hour + ':' + minute;
+															AJS.$("#startTime").val(now);
+					               						 });
+													</script>
+						                        </td>
+												<td>
+						                    	 	<input id="radioEnd" type="radio" name="endOrDuration" value="end" style="margin-right: 10px" checked="true" onclick="this.form.durationTime.readOnly=true;this.form.endTime.readOnly=false"> $i18n.getText("plugin.end.time"):</br>
+						                    	 	<input id="endTime"  type="text" name="endTime" value="$endTime" onclick="this.form.durationTime.readOnly=true;this.form.endTime.readOnly=false;this.form.radioEnd.checked=true" /> <input id="endNow"  type="button" name="endNow" value="$i18n.getText('plugin.now')" class="button" />
+						                           <script>
+														AJS.$("#endNow").click(function() {
+					                   						var currentTime = new Date();
+															var hour = currentTime.getHours();
+															if (hour < 10){
+																hour = "0" + hour
+															}
+															var minute = currentTime.getMinutes();
+															if (minute < 10){
+																minute = "0" + minute
+															}
+															var now = hour + ':' + minute;
+															AJS.$("#endTime").val(now);
+					               						 });
+													</script>
+						                    	 	
+						                    	 </td>
+						                    </tr>
+						                    <tr>
+						                    	<td width="50%">
+						                           Issue: <img src="/images/required.png" width="16" height="16" border="0"/>
+						                          ## <div id="issueSelect_cont_cont" >
+					  							   <div id="issueSelect_container" class="ajax_autocomplete atlassian-autocomplete" >
+										    		<select class="hidden"
+										    			multiple="none" 
+										    			name="issueSelect" 
+														id="issueSelect" 
+										    			data-popup-link-message="" 
+										    			data-popup-width="620" 
+										    			data-popup-height="500" 
+										    			data-remove-on-un-select="true" 
+										    			data-ajax-options.query="true" 
+										    			data-ajax-options.url="${req.contextPath}/rest/api/1.0/issues/picker" 
+										    			data-ajax-options.data.query="-" 
+										    			data-ajax-options.data.current-issue-key=""
+										    			data-ajax-options.data.show-sub-tasks="true" 
+												    	data-ajax-options.data.show-sub-task-parent="true"
+														#if (${action.currentJQL})
+															data-ajax-options.data.current_jql=${action.currentJQL}
+														#end>
+														
+													</select> 
+										    		<script>
+														var ip = new AJS.IssuePicker({
+												  		element: AJS.$("#issueSelect"),
+												  		userEnteredOptionsMsg: AJS.params.enterIssueKey,
+												  		uppercaseUserEnteredOnSelect: true,
+												  		singleSelectOnly: true,
+												   		currentProjectId: $projectsId,
+														});
+														
+														//Set the issue key			
+														AJS.$("#issueSelect-textarea").append("$issueKey");
+														ip.handleFreeInput();
+													</script>
+												##</div>
+											 	</div>
+						                        </td>
+						                    	 <td>
+						                    	 	<input id="radioDuration" type="radio" name="endOrDuration" value="duration" style="margin-right: 10px" onclick="this.form.endTime.readOnly=true;this.form.durationTime.readOnly=false" > $i18n.getText("plugin.duration.time"): </br>
+						                    	 	<input id="durationTime"  type="text" name="durationTime" value="$durationTime" onclick="this.form.endTime.readOnly=true;this.form.durationTime.readOnly=false;this.form.radioDuration.checked=true "/>
+						                    	 </td>
+						                    </tr>
+						                  </tbody>
+						            </table>     
+		            			</td>
+		            			<td width="246px">
+						            <div id="not_popup_calendar" width="246px" padding-left="30px">
+						            	#if(!$isPopup)
+						            		<script>
+											##This is the not popup calendar. Works but not nice
+											Calendar.setup({
+												firstDay : 0,
+												align : 'Br',
+												electric: true,
+												date : '$dateFormated',
+												singleClick : true,
+												showOthers: true,
+												useISO8601WeekNumbers : false,
+												flat: 'not_popup_calendar',
+												flatCallback: dateChanged,
+												ifFormat : '%Y-%m-%d'
+											});
+											function dateChanged(calendar)
+											  {
+											      document.getElementById("date").value=calendar.date.print(calendar.params.ifFormat);
+											      console.log(jQuery(document.getElementById("date")).change().length);
+											  };
+											
+											</script>
+											##Turn off the calendar shadow
+											<style type="text/css">
+												div.calendar {
+													width: 246px;
+													-moz-box-shadow: 0px 0px 0px #666;
+													-webkit-box-shadow: 0px 0px 0px #666;
+													box-shadow: 0px 0px 0px #666;
+												}
+											</style>
+										#end
+						            </div>
+		            			</td>
+		            		</tr>
+		            		<tr>
+		            			<td colspan="2">
+						            <table width="100%">
+						            	 <tr>
+						            	 	<td width="100%">
+						                    	$i18n.getText("plugin.note"):</br>
+						 	  					#set($fieldId = "comments")	
+						 	  					#parse("templates/plugins/renderers/wiki/wiki-renderer-edit.vm")
+						 	  					<script>
+						 	  						AJS.$("#comments").append("$comment");
+						 	  					</script>
+						 	  				</td>
+						               </tr>
+							</table>   
+		            	</td>
+		        	<tr>
+		    	</tbody>
+		    </table>
 			#if($isEdit)
 				<input id="Edit"  type="submit" name="edit" value="$i18n.getText('plugin.save')" class="button" />
 			#else
 				<input id="Submit"  type="submit" name="submit" value="$i18n.getText('plugin.submit')" class="button" />
 			#end
 			<input id="cancelButton"  type="button" name="Cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='JiraTimetarckerWebAction!default.jspa?dateFormated=$dateFormated'" class="button"/>
+			<input id="setting"  type="button" name="setting" onclick="location.href='JiraTimetrackerSettingsWebAction!default.jspa'" value="$i18n.getText('plugin.settings')" class="button"/>
 			</div>
 		</div>	
 	</div>
