The worklog list show an icon if the issue spent time bigger then the original estimated time. Added the JiraTimetrackerPliuginImpl a scheduled executor. The executor checks the issues estimated and spent time and if necessary send a notification mail. Extend the plugin properties file.

--- a/src/main/resources/templates/list.vm
+++ b/src/main/resources/templates/list.vm
@@ -45,6 +45,11 @@ margin-bottom: 0em;
 		                    	<tr #if($rowCount % 2 != 0) class="rowAlter" #end>
 		                    	 	<td>
 		                    	 		<a href="/browse/$worklog.issue" class="issue-link">$worklog.issue</a>
+		                    	 		
+		                    	 		#if(!$worklog.isMoreEstimatedTime)
+		                    	 			<img id="no_estimated" src="/images/icons/priority_blocker.gif" width="16" height="16" border="0"
+															alt="No more estimated time. Check the issue." style="vertical-align: text-bottom;"/>
+										#end
 		                    	 	</td>
 		                    	 	<td>
 		                    	 		$worklog.startTime
