--- a/src/main/resources/templates/settings.vm
+++ b/src/main/resources/templates/settings.vm
@@ -71,7 +71,7 @@
 						</tr>
 						<tr>
 							<td>
-								$i18n.getText("plugin.setting.filtered.issues")
+								$i18n.getText("plugin.setting.non.working.issues")
 							</td>
 						</tr>
 						<tr>
@@ -114,7 +114,7 @@
 					<tr class="buttons-container">
 						<td colspan="2">
 							<input id="savesettings"  type="submit" name="savesettings" value="$i18n.getText('plugin.save')" class="button"/>
-							<input id="cancelButton"  type="button" name="Cancel" value="$i18n.getText('plugin.cancel')" onclick="location.href='JiraTimetrackerSettingsWebAction.jspa'" class="button"/>
+							<input id="cancelButton"  type="button" name="Cancel" value="$i18n.getText('plugin.reset')" onclick="location.href='JiraTimetrackerSettingsWebAction.jspa'" class="button"/>
 						</td>
 					</tr>
 				</tbody>
