--- a/src/main/resources/templates/settings.vm
+++ b/src/main/resources/templates/settings.vm
@@ -139,7 +139,6 @@
 											ip.handleFreeInput();
 									</script>
 								</div>
-								
 							</td>
 						</tr>
 						<tr>
@@ -148,6 +147,54 @@
 							<td>
 								<div class="description">
 										$i18n.getText("plugin.setting.non.working.issues.help")
+								</div>
+							</td>		
+						</tr>
+						<tr>
+							<td style="text-align: right;" width="10%">
+								$i18n.getText("plugin.setting.collector.issues")
+							</td>
+							<td >
+								<div id="issueSelect_container_collector" class="ajax_autocomplete atlassian-autocomplete" style="margin-bottom: 35px" >
+									<select class="hidden"
+											multiple="none" 
+								   			name="issueSelect_collector" 
+											id="issueSelect_collector" 
+								   			data-popup-link-message="" 
+								   			data-popup-width="620" 
+								   			data-popup-height="500" 
+								   			data-remove-on-un-select="true" 
+								   			data-ajax-options.query="true" 
+								   			data-ajax-options.url="${req.contextPath}/rest/api/1.0/issues/picker" 
+								   			data-ajax-options.data.query="-" 
+								   			data-ajax-options.data.current-issue-key=""
+								   			data-ajax-options.data.show-sub-tasks="true" 
+									    	data-ajax-options.data.show-sub-task-parent="true"
+											#if (${action.currentJQL})
+												data-ajax-options.data.current_jql=${action.currentJQL}
+											#end>
+									</select> 
+									<script>
+											var ip = new AJS.IssuePicker({
+									  		element: AJS.$("#issueSelect_collector"),
+									 		userEnteredOptionsMsg: AJS.params.enterIssueKey,
+									  		uppercaseUserEnteredOnSelect: true,
+									  		singleSelectOnly: true,
+									   		currentProjectId: $projectsId,
+											});
+											//Set the issues key all of them	
+											AJS.$("#issueSelect_collector-textarea").append("$collectorIssueKey");
+											ip.handleFreeInput();
+									</script>
+								</div>
+							</td>
+						</tr>
+						<tr>
+							<td>
+							</td>
+							<td>
+								<div class="description">
+										$i18n.getText("plugin.setting.collector.issues.help")
 								</div>
 							</td>		
 						</tr>
