--- a/src/main/resources/templates/settings.vm
+++ b/src/main/resources/templates/settings.vm
@@ -42,7 +42,7 @@
 							$i18n.getText("plugin.setting.ispopup"): 
 						</td>
 						<td width="40%">
-						 	#if($isPopup)
+						 	#if($isPopup == 1)
 						 		<input id="radioPopup" type="radio" name="popupOrInline" value="popup" style="margin-right: 10px" checked="true">
                      		#else
                          		<input id="radioPopup" type="radio" name="popupOrInline" value="popup" style="margin-right: 10px">
@@ -55,12 +55,25 @@
 							
 						</td>
 						<td width="40%">
-						 	#if($isPopup)
-						 		<input id="radioInline" type="radio" name="popupOrInline" value="inline" style="margin-right: 10px"> 
+						 	#if($isPopup == 2)
+						 		<input id="radioInline" type="radio" name="popupOrInline" value="inline" style="margin-right: 10px" checked="true">
                      		#else
-                         		<input id="radioInline" type="radio" name="popupOrInline" value="inline" style="margin-right: 10px" checked="true">
+                         		<input id="radioInline" type="radio" name="popupOrInline" value="inline" style="margin-right: 10px"> 
                       		#end
                       		$i18n.getText("plugin.setting.inline")
+						</td>
+					</tr>
+					<tr>
+						<td style="text-align: right;"  width="10%">
+							
+						</td>
+						<td width="40%">
+						 	#if($isPopup == 3)
+						 		<input id="radioBoth" type="radio" name="popupOrInline" value="both" style="margin-right: 10px" checked="true">
+                     		#else
+                         		<input id="radioBoth" type="radio" name="popupOrInline" value="both" style="margin-right: 10px">
+                      		#end
+                      		$i18n.getText("plugin.setting.both")
                       		<div class="description">
 								$i18n.getText("plugin.setting.ispopup.help")
 							</div>
